Updated todo some more

--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,5 @@
 make git issues for these things
+make a modded 1.10.2 world with opencomputers and mekanism
 
 Renderer:
   improve camera controls
