--- a/todo.txt
+++ b/todo.txt
@@ -1,37 +1,46 @@
-socket.io for real time client updates?
-
 Pre-meeting:
 
-  Renderer:
-    improve camera controls
-    color cubes based on hardness
-    switch over to whatever the new data format will be
+  socket.io for web client to web server communication
+  tcp for robot to web server communication
+
+  Have robots send command results back to the server
+    display them on client
 
   Scanner:
     figure out new data format to allow various scan volumes
     make the data format smaller as well?
-    see if code can be optimized to use less memory
     send scans in smaller batches
+    see if code can be optimized to use less memory
 
-  Have robots send command results back to the server
+  Renderer:
+    switch over to whatever the new data format will be
+    improve camera controls
+    color cubes based on hardness
 
-  add dead reckoning for robots
-
-  Add buttons for commonly used robot commands (i.e. forward, back)
-
+  Add buttons for commonly used robot commands (i.e. forward, back, place, dig)
+  update scene with new scan data after moving
 
 
 Post-meeting:
 
-  Set up database
-  persistent server side maps that robots can read
+  mapping:
+    Set up database
+    add dead reckoning for robots
+    persistent server side maps that robots can read
+    add ability to send scans to different maps
+    detect maximum scan batch size based on available memory
+    don't add to the scene any voxels which are surrounded?
+
   Add ability to send commands to different robots
-  add ability to send scans to different maps
   Add password to commands, different per robot
-  detect maximum batch size based on available memory
-  don't add to the scene any voxels which are surrounded?
+    store hashed password with random salt in db
+    also store hash on robot, check only that hash for commands
+
+  display contents of robot inventory and current selected space
 
 
 distant future:
-neural network to help predict block ids from hardness maps
-blueprint storage and rendering
+  implement minecraft player style inventory manipulation on web-client
+  prediction for inventory and movement?
+  blueprint storage and rendering
+  neural network to help predict block ids from hardness maps
