deleted some old testing code

--- a/todo.txt
+++ b/todo.txt
@@ -1,10 +1,6 @@
 now:
 
-  fix socket.io url in index view (only works when host is on the same box as the client)
-
-  sendScan and scanDirection: descriptive error when geolyzer not present
-
-  
+  does scanForward actually work?
 
   set view distance for scanForward and scanArea
   toggle for scanning with goto command
@@ -17,6 +13,8 @@ now:
   how to specify areas to dig?
 
 later:
+
+  move ip address information to a settings file
 
   camera
     go to robot location
