in the process of changing scanDirection and adding new buttons for a smaller scanForward/back

--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,13 @@
 now:
 
-  set view distance for scanForward and scanArea
-  toggle for scanning with goto command
+  add smaller scanForward/scanBack sizes
+  toggle for scanning with movement commands
+
+  add bash shell mode:
+    local file = assert(io.popen('ls /', 'r'));
+    local output = file:read('*all');
+    file:close();
+    print(output);
 
   add inventory information
     display contents of robot inventory and current selected space
