--- a/todo.txt
+++ b/todo.txt
@@ -1,9 +1,13 @@
 now:
 
+  at home:
+    fix crashed robot (problem with new trackPosition code?)
+    test moveAndScan
+
   toggle for scanning with movement commands
   add up and down scans for goto command
 
-  write digging program
+  write digging program (reuse blueprint scan program?)
 
   add inventory information
   display contents of robot inventory and current selected space
