--- a/todo.txt
+++ b/todo.txt
@@ -1,8 +1,5 @@
 now:
 
-  fix scanForwardBig in moveAndScan
-
-  toggle for scanning with movement commands
   add up and down scans for goto command
 
   write digging program (reuse blueprint scan program?)
@@ -13,6 +10,8 @@ now:
   add crafting program
 
 later:
+
+  render tabs properly in robot responses
 
   message div blocking click to engage camera control
 
