--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,8 @@
 now:
 
+  bug: voxels which are no longer present not deleted when scan data received
+  bug: robotVoxel deleted by addVoxel
+
   implement goToAdjacent
     get positions adjacent to target
     sort by distance
