--- a/todo.txt
+++ b/todo.txt
@@ -1,12 +1,11 @@
 now:
 
-  fix whatever crashed the robot
-
   select area in interface (move tool, select tool)
     midpoint(p1, p2)
     makeBox(p1, p2)
     moveBox(p)
-  write digging program (reuse blueprint scan program?)
+    
+  write digging program
 
   add inventory information
   display contents of robot inventory and current selected space
