account registration added

--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,6 @@
 now:
 
-  implement registration post
+  make password confirmation field actually do stuff
 
   allow the server to identify the user associated with a socket
   send commands only to robots associated with your username
